; ModuleID = '/home/carl/AnghaBench/git/extr_pack-write.c_write_pack_header.c'
source_filename = "/home/carl/AnghaBench/git/extr_pack-write.c_write_pack_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hashfile = type { i32 }
%struct.pack_header = type { i8*, i8*, i8* }

@PACK_SIGNATURE = common dso_local global i32 0, align 4
@PACK_VERSION = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @write_pack_header(%struct.hashfile* %0, i32 %1) #0 {
  %3 = alloca %struct.hashfile*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.pack_header, align 8
  store %struct.hashfile* %0, %struct.hashfile** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @PACK_SIGNATURE, align 4
  %7 = call i8* @htonl(i32 %6)
  %8 = getelementptr inbounds %struct.pack_header, %struct.pack_header* %5, i32 0, i32 2
  store i8* %7, i8** %8, align 8
  %9 = load i32, i32* @PACK_VERSION, align 4
  %10 = call i8* @htonl(i32 %9)
  %11 = getelementptr inbounds %struct.pack_header, %struct.pack_header* %5, i32 0, i32 1
  store i8* %10, i8** %11, align 8
  %12 = load i32, i32* %4, align 4
  %13 = call i8* @htonl(i32 %12)
  %14 = getelementptr inbounds %struct.pack_header, %struct.pack_header* %5, i32 0, i32 0
  store i8* %13, i8** %14, align 8
  %15 = load %struct.hashfile*, %struct.hashfile** %3, align 8
  %16 = call i32 @hashwrite(%struct.hashfile* %15, %struct.pack_header* %5, i32 24)
  ret i32 24
}

declare dso_local i8* @htonl(i32) #1

declare dso_local i32 @hashwrite(%struct.hashfile*, %struct.pack_header*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
